<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hgapp.a0086.common.widgets.NTitleBar
        android:id="@+id/tvCompanyPayBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backText="@string/comm_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_aliqcpay_money"
            android:textColor="@color/textview_hight"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/etDepositCompanyPayMoney"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/deposite_aliqcpay_money_h"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposite_bank_qset_money"
            android:textColor="@color/textview_hight"
            android:textSize="15sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvBalanceTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_aliqcpay_type"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/etDepositCompanyPayName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/deposite_aliqcpay_type_h"

            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_bank_pay_channel"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvDepositCompanyPayChannel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/icon_textview_transfer"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/deposite_bank_pay_channel_h" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_aliqcpay_time"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvDepositCompanyPayTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/icon_textview_transfer"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/deposite_aliqcpay_time_h" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp"
        android:gravity="left|center">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_bank_submit_mark"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/edDepositCompanyPayRemark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/deposite_bank_submit_mark_h" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnDepositCompanyPaySubmit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/h_tbn_height"
            android:layout_weight="1"
            android:text="@string/deposite_bank_submit_sure" />

        <Button
            android:id="@+id/btnDepositCompanyPaySubmitReset"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/h_tbn_height"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/deposite_bank_reset" />
    </LinearLayout>
    <TextView
        android:layout_margin="5dp"
        android:text="@string/deposite_bank_submit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>