<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hgapp.a0086.common.widgets.NTitleBar
        android:id="@+id/tvThirdBankBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backText="返回" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposite_usdt_title"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/cp_hall_tv"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_money"
            android:textColor="@color/textview_hight"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etDepositThirdBankMoney"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/deposite_aliqcpay_money_h"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_usdt_type_name"
            android:textColor="@color/textview_hight"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvDepositThirdBankChannel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/deposite_usdt_type" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/l_view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_edit_height"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/deposite_usdt_channel"
            android:textColor="@color/textview_hight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDepositThirdBankCode"
            android:drawableStart="@mipmap/usdt"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/deposite_usdt_channel_h" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/l_view_color" />


    <Button
    android:id="@+id/btnDepositThirdBankSubmit"
    android:layout_width="match_parent"
    android:layout_height="@dimen/h_tbn_height"

    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="40dp"
    android:text="@string/deposite_submit" />

    <Button
        android:id="@+id/btnUSDTSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_tbn_height"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/textview_normal"
        android:layout_marginTop="20dp"
        android:text="@string/deposite_usdt_tutorial" />

    <TextView
        android:id="@+id/tvUsdtMark"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deposite_usdt_note"
        />
</LinearLayout>