<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/popCPOrder1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:textColor="@color/cp_hall_tv"
        android:background="@color/title_text"
        android:text="@string/lotter_me_jszd"
        android:gravity="center"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/n_edittext_hint" />
    <TextView
        android:id="@+id/popCPOrder2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/cp_hall_tv"
        android:background="@color/title_text"
        android:text="@string/lotter_me_jryj"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/n_edittext_hint" />
    <TextView
        android:id="@+id/popCPOrder3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/cp_hall_tv"
        android:background="@color/title_text"
        android:text="@string/lotter_bar_record"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/n_edittext_hint" />
    <TextView
        android:id="@+id/popCPOrder4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/cp_hall_tv"
        android:background="@color/title_text"
        android:text="@string/lotter_me_kjjg"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/n_edittext_hint" />

    <TextView
        android:id="@+id/popCPOrder5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:textColor="@color/cp_hall_tv"
        android:background="@color/title_text"
        android:text="@string/lotter_me_zxkf"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/n_edittext_hint" />

</LinearLayout>